--- a/Practice/VariablesInJS.html
+++ b/Practice/VariablesInJS.html
@@ -13,13 +13,13 @@
     <h2>1.var:</h2>
     <p>var is the original way to declare variables in JavaScript. It has function scope, which means it is accessible anywhere within the function it was declared in, even before the actual declaration. If a variable is declared outside of any function, it becomes a global variable.</p>
        var a; <br>
-       var a = 10; // Initialization and Declaration or Asignemnt <br>
+       var a = 10; // Initialization and Declaration or Assignment <br>
        var a = 15;  // Re-Declaration is possible <br>
        a = 25;  // Re-Assignment is possible <br>
        console.log(a);
        <script>
         var a;
-        var a = 10; // Initialization and Declaration or Asignemnt
+        var a = 10; // Initialization and Declaration or Assignment
         var a = 15;  // Re-Declaration is possible
         a = 25;  // Re-Assignment is possible
        console.log(a);
@@ -27,27 +27,27 @@
 
     <h2>2.let:</h2>
     <p>let allows you to declare block-scoped variables. This means the variable is only accessible within the block (a block is a section of code between curly braces {}), statement, or expression where it is defined. </p>
-       let nirav_marks = 90 // Initialization and Declaration or Asignemnt <br>
+       let nirav_marks = 90 // Initialization and Declaration or Assignment <br>
        let nirav_marks = 40 // Re-Declaration is not possible <br>
-       nirav_marks = 75  // Re-assignemnt Possible <br>
+       nirav_marks = 75  // Re-assignment Possible <br>
        console.log(nirav_marks);
        <!-- <script>
-        let nirav_marks = 90 // Initialization and Declaration or Asignemnt
+        let nirav_marks = 90 // Initialization and Declaration or Assignment
         let nirav_marks = 40 // Re-Declaration is not possible
-        nirav_marks = 75  // Re-assignemnt Possible
+        nirav_marks = 75  // Re-assignment Possible
         console.log(nirav_marks);
        </script> -->
 
     <h2>3.const:</h2>
     <p>const is used to declare variables that cannot be reassigned after their initial assignment. Like let, const is block-scoped. It's important to note that while a const variable cannot be reassigned, if it holds an object or an array, the properties or elements of that object or array can still be modified.</p>
-       const fav_Person = "nirav"; // Initialization and Declaration or Asignemnt <br>
+       const fav_Person = "nirav"; // Initialization and Declaration or Assignment <br>
        const fav_Person = "krina"  // Re-Declaration is not possible <br>
-       fav_Person = "krupa"  // Re-Assignemnt is not possible <br>
+       fav_Person = "krupa"  // Re-Assignment is not possible <br>
        console.log(fav_Person);
        <!-- <script>
-        const fav_Person = "nirav"; // Initialization and Declaration or Asignemnt
+        const fav_Person = "nirav"; // Initialization and Declaration or Assignment
         const fav_Person = "krina"  // Re-Declaration is not possible
-        fav_Person = "krupa"  // Re-Assignemnt is not possible
+        fav_Person = "krupa"  // Re-Assignment is not possible
         console.log(fav_Person);
        </script> -->
 </body>
