--- a/Practice/JSOperators/OperatorsIntro.html
+++ b/Practice/JSOperators/OperatorsIntro.html
@@ -13,13 +13,13 @@
 <body>
     <h1>Operators in JS</h1>
     <!-- <h2>Arithmetic Operators</h2> -->
-    <img src="../image/JavaScript-Arithmatic-Operators.png" alt="" width="800px">
+    <img src="../../image/JavaScript-Arithmatic-Operators.png" alt="" width="800px">
     <!-- <h2>Assignment Operators</h2> -->
-    <img src="../image/JavaScript-Assignment-Operators.png" alt="" width="800px">
+    <img src="../../image/JavaScript-Assignment-Operators.png" alt="" width="800px">
     <!-- <h2>Comparison Operators</h2> -->
-    <img src="../image/Comparison.jpg" alt="" width="800px">
+    <img src="../../image/Comparison.jpg" alt="" width="800px">
     <!-- <h2>Logical Operators</h2> -->
-    <img src="../image/JavaScript-Logical-Operator.png" alt="" width="800px">
+    <img src="../../image/JavaScript-Logical-Operator.png" alt="" width="800px">
 
     <script>
         let a = undefined;
